# SeaDexRSS

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
app/: database.py  main.py  models.py  rss_generator.py  seadex_client.py
